k8s/contapics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contapics
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: contapics.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: contapics-backend-backend
                port:
                  number: 8080
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: contapics-frontend
                port:
                  number: 80
